fix: image padding and gap

--- a/web/css/service.css
+++ b/web/css/service.css
@@ -63,7 +63,7 @@
 
 .support-section {
     background-color: #B3A89B;
-    padding: 60px 80px;
+    padding: 50px;
     color: white;
 }
 
@@ -71,6 +71,7 @@
 .support-title {
     font-size: 40px;
     margin-bottom: 40px;
+    padding: 50px;
 }
 
 .support-images {
@@ -123,7 +124,7 @@
 .support-text-row {
     display: flex;
     justify-content: space-between;
-    gap: 25px;
+    gap: 61px;
 }
 
 .support-text {
